# sklearn-custom-pipelines

./: .gitignore  .uvrc  MANIFEST.in  PROJECT_SUMMARY.py  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  train.py  train_catboost.py  train_logreg.py
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
examples/: example_catboost.py  example_logreg.py
sklearn_custom_pipelines/: __init__.py
sklearn_custom_pipelines/core/: __init__.py  encoders.py  featurizers.py  models.py
sklearn_custom_pipelines/utils/: __init__.py  const.py  custom_mappings.py  helpers.py
tests/: __init__.py  conftest.py  test_transformers.py
transformers/: const.py  custom_mappings.py  encoders.py  featurizers.py  helpers.py  models.py
